--- a/NIA_info.html
+++ b/NIA_info.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="model_container14" id="model_container14">
-        <div class="model14" style="width: auto">
+        <div class="model14" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #6f121f;">
                 <h1 style="text-align: right; cursor: pointer;" id="close14">
                     <i class="fa-solid fa-xmark"></i>
@@ -27,14 +27,18 @@
             <div style="display: flex;flex-direction: row;">
                 <img src="./image/11-1.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
-                    <h2 style="font-size: 30px; color: #b2adc4;">御手洗 十四</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    <h2 style="font-size: 30px; color: #b2adc4; margin-bottom: 10px;">御手洗 十四</h2>
+                    <p>年齡：17（高二）</p>
+                    <p>身高：152</p>
+                    <p>
+                        白十四的雙胞胎妹妹，與雛是戀人。任性，自我中心，小惡魔系。看似開放，喜歡開黃腔，面對雛容易過度在意導致笨手笨腳，會傲嬌炸毛，經常作死。情緒起伏較大，反應稍微誇張。表面上是白十四在順從黑十四，實際上黑十四很聽從白十四的話。
+                    </p>
                 </div>
             </div>
         </div>
     </div>
     <div class="model_containerh" id="model_containerh">
-        <div class="modelh" style="width: auto">
+        <div class="modelh" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #6f121f;">
                 <h1 style="text-align: right; cursor: pointer;" id="closeh">
                     <i class="fa-solid fa-xmark"></i>
@@ -43,8 +47,12 @@
             <div style="display: flex;flex-direction: row;">
                 <img src="./image/22-1.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
-                    <h2 style="color: #c1b7eb; font-size: 30px;">宮崎 雛</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    <h2 style="color: #c1b7eb; font-size: 30px; margin-bottom: 10px;">宮崎 雛</h2>
+                    <p>年齡：17（高二）</p>
+                    <p>身高：154</p>
+                    <p>
+                        比奈的雙胞胎妹妹，與黑十四是戀人。高傲自信、不怎麼親近人，清楚自己的強項在哪裡並加以運用。完美主義者，比起粉絲反應更加執著於表演內容、品質。喜歡調戲黑十四，覺得黑十四很可愛。                        
+                    </p>
                 </div>
             </div>
         </div>
@@ -75,16 +83,17 @@
         <div class="info">
             <div style="width: 48%;">
                 <h1 style="color: #6f121f;">Nubile Asphodel</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum error cumque. Iure, minima magnam, impedit voluptas distinctio itaque soluta non quasi inventore molestiae similique nisi laboriosam veritatis vero neque.</p>
-                <button id="open">成員</button>
+                <p>以強勢、神秘的表演風格為主。團體個人風格強烈，兩人甚至會再台上莫名其妙對槓起來。粉絲福利給的較極端，客群較少一點但也更忠心。</p>
+                <button id="open">成員介紹</button>
             </div>
             <div style="width: 48%; display: flex; align-items: center; justify-content: center;">
                 <img src="./image/00.png" alt="">
             </div>
         </div>
     </div>
-    <div style="width:100%; height: 35px ; position: absolute; bottom: 0; background-color: #f8f9fa; text-align: right; display: flex; align-items: center;">
+    <div style="width:100%; height: 35px ; background-color: #f8f9fa; text-align: right; display: flex; align-items: center;">
         <p style="width: 100%; margin-right: 5px;">
+            BACKGROUND | <a href="https://www.pixiv.net/users/42601023" style="color: #333; text-decoration: none;">山田野郎</a>、
             ART | 奈露
         </p>
     </div>
