--- a/SR_info.html
+++ b/SR_info.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="model_container14" id="model_container14">
-        <div class="model14" style="width: auto">
+        <div class="model14" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #2b446a;">
                 <h1 style="text-align: right; cursor: pointer;" id="close14">
                     <i class="fa-solid fa-xmark"></i>
@@ -27,14 +27,18 @@
             <div style="display: flex;flex-direction: row;">
                 <img src="./image/66.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
-                    <h2 style="font-size: 30px; color: #a8a8a8;">荒川 靜</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    <h2 style="font-size: 30px; color: #a8a8a8; margin-bottom: 10px;">荒川 靜</h2>
+                    <p>年齡：約19（生日不明、高中畢業）</p>
+                    <p>身高：181</p>
+                    <p>
+                        電波ky仔，專屬理央的超大忠犬，超喜歡理央跟理央的一切。什麼都吃食量很大。對周遭環境及空間的感知很敏銳，可以輕易在建築物之間跳上跳下，但有時會分心摔下來。眼睛不好不喜歡一直張著眼睛，不喜歡太亮太吵的地方，和理央單獨在一起時會閉上眼睛休息。
+                    </p>
                 </div>
             </div>
         </div>
     </div>
     <div class="model_containerh" id="model_containerh">
-        <div class="modelh" style="width: auto">
+        <div class="modelh" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #2b446a;">
                 <h1 style="text-align: right; cursor: pointer;" id="closeh">
                     <i class="fa-solid fa-xmark"></i>
@@ -43,8 +47,12 @@
             <div style="display: flex;flex-direction: row;">
                 <img src="./image/55.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
-                    <h2 style="color: #d5ebee; font-size: 30px;">海老原 理央</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    <h2 style="color: #d5ebee; font-size: 30px; margin-bottom: 10px;">海老原 理央</h2>
+                    <p>年齡：19（高中畢業）</p>
+                    <p>身高：175</p>
+                    <p>
+                        舊MSK實質負責人。家中經營日式食堂，擅長料理。濫好人，不會拒絕別人的請託，與靜接觸後有稍微改善。賢妻良母，雙親忙碌因此生活技能強，總是碎念說受不了但總是幫靜收拾善後。
+                    </p>
                 </div>
             </div>
         </div>
@@ -76,15 +84,16 @@
             <div style="width: 48%;">
                 <h1 style="color: #2b446a;">靜理央</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum error cumque. Iure, minima magnam, impedit voluptas distinctio itaque soluta non quasi inventore molestiae similique nisi laboriosam veritatis vero neque.</p>
-                <button id="open">成員</button>
+                <button id="open">成員介紹</button>
             </div>
             <div style="width: 48%; display: flex; align-items: center; justify-content: center;">
                 <img src="./image/0000.png" alt="">
             </div>
         </div>
     </div>
-    <div style="width:100%; height: 35px ; position: absolute; bottom: 0; background-color: #f8f9fa; text-align: right; display: flex; align-items: center;">
+    <div style="width:100%; height: 35px ;  background-color: #f8f9fa; text-align: right; display: flex; align-items: center;">
         <p style="width: 100%; margin-right: 5px;">
+            BACKGROUND | <a href="https://www.pixiv.net/users/42601023" style="color: #333; text-decoration: none;">山田野郎</a>、
             ART | 奈露
         </p>
     </div>
