--- a/MSK_info.html
+++ b/MSK_info.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="model_container14" id="model_container14">
-        <div class="model14" style="width: auto">
+        <div class="model14" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #a29398;">
                 <h1 style="text-align: right; cursor: pointer;" id="close14">
                     <i class="fa-solid fa-xmark"></i>
@@ -27,14 +27,18 @@
             <div style="display: flex;flex-direction: row;">
                 <img src="./image/88.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
-                    <h2 style="font-size: 30px; color: #efe4c7;">御手洗 拾肆</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    <h2 style="font-size: 30px; color: #efe4c7; margin-bottom: 10px;">御手洗 拾肆</h2>
+                    <p>年齡：18（高三）</p>
+                    <p>身高：184</p>
+                    <p>
+                        擊敗人。能看清他人的想法和情緒，卻不大想管。一旦對象是在意的人容易無法冷靜判斷。在外人面前會裝乖裝紳士，熟悉了才會暴露本性，前期在日向面前持續扮演「可靠前輩」的角色，有點保護過度的傾向，被日向打醒。
+                    </p>
                 </div>
             </div>
         </div>
     </div>
     <div class="model_containerh" id="model_containerh">
-        <div class="modelh" style="width: auto">
+        <div class="modelh" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #a29398;">
                 <h1 style="text-align: right; cursor: pointer;" id="closeh">
                     <i class="fa-solid fa-xmark"></i>
@@ -43,8 +47,12 @@
             <div style="display: flex;flex-direction: row;">
                 <img src="./image/77.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
-                    <h2 style="color: #d5cfeb; font-size: 30px;">宮崎 日向</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    <h2 style="color: #d5cfeb; font-size: 30px; margin-bottom: 10px;">宮崎 日向</h2>
+                    <p>年齡：16（高一）</p>
+                    <p>身高：164</p>
+                    <p>
+                        開朗的理科少年，善於操作電子設備，常以工程師邏輯思考，總有意無意地抓/鑽到別人的語病。感情纖細溫柔但比較遲鈍。偶像宅，在加入MSK以前就是舊MSK的超級粉絲，看到前輩們會發瘋，就算已經成為了MSK的一員也一樣。
+                    </p>
                 </div>
             </div>
         </div>
@@ -76,15 +84,16 @@
             <div style="width: 48%;">
                 <h1 style="color: #a29398;">Masker</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum error cumque. Iure, minima magnam, impedit voluptas distinctio itaque soluta non quasi inventore molestiae similique nisi laboriosam veritatis vero neque.</p>
-                <button id="open">成員</button>
+                <button id="open">成員介紹</button>
             </div>
             <div style="width: 48%; display: flex; align-items: center; justify-content: center;">
                 <img src="./image/000.png" alt="">
             </div>
         </div>
     </div>
-    <div style="width:100%; height: 35px ; position: absolute; bottom: 0; background-color: #f8f9fa; text-align: right; display: flex; align-items: center;">
+    <div style="width:100%; height: 35px ; background-color: #f8f9fa; text-align: right; display: flex; align-items: center;">
         <p style="width: 100%; margin-right: 5px;">
+            BACKGROUND | <a href="https://www.pixiv.net/users/42601023" style="color: #333; text-decoration: none;">山田野郎</a>、
             ART | 奈露
         </p>
     </div>
