--- a/TPS_info.html
+++ b/TPS_info.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="model_container14" id="model_container14">
-        <div class="model14" style="width: auto">
+        <div class="model14" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #fcd9ce;">
                 <h1 style="text-align: right; cursor: pointer;" id="close14">
                     <i class="fa-solid fa-xmark"></i>
@@ -27,14 +27,18 @@
             <div style="display: flex;flex-direction: row;">
                 <img src="./image/44-1.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
-                    <h2 style="font-size: 30px; color: #cfe2f3;">御手洗 十四</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    <h2 style="font-size: 30px; color: #cfe2f3; margin-bottom: 10px;">御手洗 十四</h2>
+                    <p>年齡：17（高二）</p>
+                    <p>身高：152</p>
+                    <p>
+                        黑十四的雙胞胎姐姐，與比奈是情侶。情緒起伏不大，面對觸及原則的事情溫柔但不妥協。對他人不熱情但友善，忠心誠懇、以重要他人為生活重心。
+                    </p>
                 </div>
             </div>
         </div>
     </div>
     <div class="model_containerh" id="model_containerh">
-        <div class="modelh" style="width: auto">
+        <div class="modelh" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #fcd9ce;">
                 <h1 style="text-align: right; cursor: pointer;" id="closeh">
                     <i class="fa-solid fa-xmark"></i>
@@ -43,8 +47,12 @@
             <div style="display: flex;flex-direction: row;">
                 <img src="./image/33-1.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
-                    <h2 style="color: #d9d2e9; font-size: 30px;">宮崎 比奈</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    <h2 style="color: #d9d2e9; font-size: 30px; margin-bottom: 10px;">宮崎 比奈</h2>
+                    <p>年齡：17（高二）</p>
+                    <p>身高：154</p>
+                    <p>
+                        宮崎雛的雙胞胎姐姐，與白十四是情侶。能傾聽他人的煩惱並給予建議，對其他人是溫柔可靠的姐姐。平常不怎麼生氣，但真的生氣起來很可怕。能清晰地分析現狀和指派工作，是團體方向的策畫者。
+                    </p>
                 </div>
             </div>
         </div>
@@ -75,16 +83,17 @@
         <div class="info">
             <div style="width: 48%;">
                 <h1 style="color: #fcd9ce;">Tune Pansy</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum error cumque. Iure, minima magnam, impedit voluptas distinctio itaque soluta non quasi inventore molestiae similique nisi laboriosam veritatis vero neque.</p>
-                <button id="open">成員</button>
+                <p>王道系團體，以清脆、空靈、精靈般的表演風格為主。團體內部關係融洽，沒有特別貼給別人看，但就是很貼。兩人貼貼就是粉絲福利了。</p>
+                <button id="open">成員介紹</button>
             </div>
             <div style="width: 48%; display: flex; align-items: center; justify-content: center;">
                 <img src="./image/0.png" alt="">
             </div>
         </div>
     </div>
-    <div style="width:100%; height: 35px ; position: absolute; bottom: 0; background-color: #f8f9fa; text-align: right; display: flex; align-items: center;">
+    <div style="width:100%; height: 35px ; background-color: #f8f9fa; text-align: right; display: flex; align-items: center;">
         <p style="width: 100%; margin-right: 5px;">
+            BACKGROUND | <a href="https://www.pixiv.net/users/42601023" style="color: #333; text-decoration: none;">山田野郎</a>、
             ART | 奈露
         </p>
     </div>
