--- a/NIA_info.html
+++ b/NIA_info.html
@@ -20,8 +20,8 @@
     <div class="model_container14" id="model_container14">
         <div class="model14" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #6f121f;">
-                <h1 style="text-align: right; cursor: pointer;" id="close14">
-                    <i class="fa-solid fa-xmark"></i>
+                <h1 style="text-align: right;">
+                    <i class="fa-solid fa-xmark" id="close14" style="cursor: pointer;"></i>
                 </h1>
             </div>
             <div style="display: flex;flex-direction: row;">
@@ -40,8 +40,8 @@
     <div class="model_containerh" id="model_containerh">
         <div class="modelh" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #6f121f;">
-                <h1 style="text-align: right; cursor: pointer;" id="closeh">
-                    <i class="fa-solid fa-xmark"></i>
+                <h1 style="text-align: right;">
+                    <i class="fa-solid fa-xmark" id="closeh" style="cursor: pointer;"></i>
                 </h1>
             </div>
             <div style="display: flex;flex-direction: row;">
@@ -60,8 +60,8 @@
     <div class="model_container" id="model_container">
         <div class="model">
             <div style="margin-bottom: 10px; color: #6f121f;">
-                <h1 style="text-align: right; cursor: pointer;" id="close">
-                    <i class="fa-solid fa-xmark"></i>
+                <h1 style="text-align: right;">
+                    <i class="fa-solid fa-xmark"  id="close" style="cursor: pointer;"></i>
                 </h1>
             </div>
             <div>
