--- a/SR_info.html
+++ b/SR_info.html
@@ -20,8 +20,8 @@
     <div class="model_container14" id="model_container14">
         <div class="model14" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #2b446a;">
-                <h1 style="text-align: right; cursor: pointer;" id="close14">
-                    <i class="fa-solid fa-xmark"></i>
+                <h1 style="text-align: right;">
+                    <i class="fa-solid fa-xmark" id="close14" style="cursor: pointer;"></i>
                 </h1>
             </div>
             <div style="display: flex;flex-direction: row;">
@@ -31,7 +31,10 @@
                     <p>年齡：約19（生日不明、高中畢業）</p>
                     <p>身高：181</p>
                     <p>
-                        電波ky仔，專屬理央的超大忠犬，超喜歡理央跟理央的一切。什麼都吃食量很大。對周遭環境及空間的感知很敏銳，可以輕易在建築物之間跳上跳下，但有時會分心摔下來。眼睛不好不喜歡一直張著眼睛，不喜歡太亮太吵的地方，和理央單獨在一起時會閉上眼睛休息。
+                        介紹：<br>舊Masker的掛名隊長，團務其實都是理央處理。電波ky仔，專屬理央的超大忠犬，超喜歡理央跟理央的一切，對其他人沒興趣。對周遭環境及空間的感知很敏銳，可以輕易在建築物之間跳上跳下，但有時會分心摔下來。眼睛不好不喜歡一直張著眼睛，不喜歡太亮太吵的地方，和理央單獨在一起時會閉上眼睛休息。
+                    </p>
+                    <p>
+                        表演風格：<br>自我風格強烈，表演全憑感覺，完全沒在考慮觀眾的接受度。能簡單做出令人匪夷所思的高難度動作及舞蹈，討厭舞台燈光，與理央一起表演會矇上眼睛。
                     </p>
                 </div>
             </div>
@@ -40,8 +43,8 @@
     <div class="model_containerh" id="model_containerh">
         <div class="modelh" style="width: 50%;">
             <div style="margin-bottom: 10px; color: #2b446a;">
-                <h1 style="text-align: right; cursor: pointer;" id="closeh">
-                    <i class="fa-solid fa-xmark"></i>
+                <h1 style="text-align: right;">
+                    <i class="fa-solid fa-xmark" id="closeh" style="cursor: pointer;"></i>
                 </h1>
             </div>
             <div style="display: flex;flex-direction: row;">
@@ -51,7 +54,10 @@
                     <p>年齡：19（高中畢業）</p>
                     <p>身高：175</p>
                     <p>
-                        舊MSK實質負責人。家中經營日式食堂，擅長料理。濫好人，不會拒絕別人的請託，與靜接觸後有稍微改善。賢妻良母，雙親忙碌因此生活技能強，總是碎念說受不了但總是幫靜收拾善後。
+                        介紹：<br>舊Masker實質負責人。家中經營日式食堂，擅長料理。濫好人性格，不會拒絕別人的請託，與靜接觸後有稍微改善。雙親忙碌因此生活技能強，總是碎念說受不了但一直以來都幫著靜收拾善後。
+                    </p>
+                    <p>
+                        表演風格：<br>歌聲溫和柔潤，擅長配合他人。經常站在輔助位方便靜發揮，會幫助靜引導觀眾的視線及注意力，讓靜的表演變得容易吸收。
                     </p>
                 </div>
             </div>
@@ -60,8 +66,8 @@
     <div class="model_container" id="model_container">
         <div class="model">
             <div style="margin-bottom: 10px; color: #2b446a;">
-                <h1 style="text-align: right; cursor: pointer;" id="close">
-                    <i class="fa-solid fa-xmark"></i>
+                <h1 style="text-align: right;">
+                    <i class="fa-solid fa-xmark" id="close" style="cursor: pointer;"></i>
                 </h1>
             </div>
             <div>
@@ -83,7 +89,7 @@
         <div class="info">
             <div style="width: 48%;">
                 <h1 style="color: #2b446a;">靜理央</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum error cumque. Iure, minima magnam, impedit voluptas distinctio itaque soluta non quasi inventore molestiae similique nisi laboriosam veritatis vero neque.</p>
+                <p>Masker創辦人。畢業將Masker交給拾肆後，兩人以新團體名義進行活動。以團隊高契合度為亮點。</p>
                 <button id="open">成員介紹</button>
             </div>
             <div style="width: 48%; display: flex; align-items: center; justify-content: center;">
