--- a/SR_info.html
+++ b/SR_info.html
@@ -77,7 +77,10 @@
         </div>
     </div>
     <div class="page">
-        <div class="list" style="background-color: #2b446a; height: 100vh;">
+        <div class="listt">
+            <i class="fa-solid fa-list"></i>
+        </div>
+        <div class="list" style="background-color: #2b446a;">
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./TPS_info.html">Tune Pansy</a></li>
@@ -87,22 +90,30 @@
             </ul>
         </div>
         <div class="info">
-            <div style="width: 48%;">
+            <div class="fontt">
                 <h1 style="color: #2b446a;">靜理央</h1>
                 <p>Masker創辦人。畢業將Masker交給拾肆後，兩人以新團體名義進行活動。以團隊高契合度為亮點。</p>
                 <button id="open">成員介紹</button>
             </div>
-            <div style="width: 48%; display: flex; align-items: center; justify-content: center;">
-                <img src="./image/0000.png" alt="">
+            <div class="imgg">
+                <div class="for_pc">
+                    <img src="./image/0000.png" alt="">
+                </div>
+                <div class="for_m">
+                    <img src="./image/50.png">
+                </div>
+                
             </div>
         </div>
     </div>
+    <!--
     <div style="width:100%; height: 35px ;  background-color: #f8f9fa; text-align: right; display: flex; align-items: center;">
         <p style="width: 100%; margin-right: 5px;">
             BACKGROUND | <a href="https://www.pixiv.net/users/42601023" style="color: #333; text-decoration: none;">山田野郎</a>、
             ART | 奈露
         </p>
     </div>
+    -->
 </body>
 <script>
     const open=document.getElementById('open');
