--- a/SR_info.html
+++ b/SR_info.html
@@ -102,7 +102,8 @@
             <div class="fontt">
                 <h1 style="color: #2b446a;">靜理央</h1>
                 <p>Masker創辦人。畢業將Masker交給拾肆後，兩人以新團體名義進行活動。以團隊高契合度為亮點。</p>
-                <button id="open">成員介紹</button>
+                <button id="open" class="bpc">成員介紹</button>
+                <button class="bm">成員介紹</button>
             </div>
             <div class="imgg">
                 <div class="for_pc">
