--- a/MSK_info.html
+++ b/MSK_info.html
@@ -159,7 +159,7 @@
             dd.style.color='#ffffff';
         }else{
             menu.style.maxHeight='0px';
-            dd.style.color='#6f121f';
+            dd.style.color='#a29398';
 
         }
     }
