--- a/SR_info.html
+++ b/SR_info.html
@@ -82,7 +82,7 @@
             <li><a href="./TPS_info.html">Tune Pansy</a></li>
             <li><a href="./NIA_info.html">Nubile Asphodel</a></li>
             <li><a href="./MSK_info.html">Masker</a></li>
-            <li><a href="#">靜理央</a></li>
+            <li><a href="./SR_info.html">靜理央</a></li>
         </ul>
     </header>
     <div class="page">
