--- a/MSK_info.html
+++ b/MSK_info.html
@@ -23,7 +23,7 @@
             <li><a href="./TPS_info.html">Tune Pansy</a></li>
             <li><a href="./NIA_info.html">Nubile Asphodel</a></li>
             <li><a href="./MSK_info.html">Masker</a></li>
-            <li><a href="#">靜理央</a></li>
+            <li><a href="./SR_info.html">靜理央</a></li>
         </ul>
     </header>
     <div class="model_container14" id="model_container14">
