--- a/SR_info.html
+++ b/SR_info.html
@@ -18,23 +18,23 @@
 </head>
 <body>
     <div class="model_container14" id="model_container14">
-        <div class="model14" style="width: 50%;">
+        <div class="model14">
             <div style="margin-bottom: 10px; color: #2b446a;">
                 <h1 style="text-align: right;">
                     <i class="fa-solid fa-xmark" id="close14" style="cursor: pointer;"></i>
                 </h1>
             </div>
-            <div style="display: flex;flex-direction: row;">
+            <div class="c141">
                 <img src="./image/66.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
-                    <h2 style="font-size: 30px; color: #a8a8a8; margin-bottom: 10px;">荒川 靜</h2>
-                    <p>年齡：約19（生日不明、高中畢業）</p>
-                    <p>身高：181</p>
+                    <h2 style="font-size: 30px; color: #a8a8a8; margin-bottom: 10px; margin-top: 10px;">荒川 靜</h2>
+                    <p><i class="fa-solid fa-diamond"></i>年齡：約19（生日不明、高中畢業）</p>
+                    <p><i class="fa-solid fa-diamond"></i>身高：181</p>
                     <p>
-                        介紹：<br>舊Masker的掛名隊長，團務其實都是理央處理。電波ky仔，專屬理央的超大忠犬，超喜歡理央跟理央的一切，對其他人沒興趣。對周遭環境及空間的感知很敏銳，可以輕易在建築物之間跳上跳下，但有時會分心摔下來。眼睛不好不喜歡一直張著眼睛，不喜歡太亮太吵的地方，和理央單獨在一起時會閉上眼睛休息。
+                        <i class="fa-solid fa-diamond"></i>介紹：<br>舊Masker的掛名隊長，團務其實都是理央處理。電波ky仔，專屬理央的超大忠犬，超喜歡理央跟理央的一切，對其他人沒興趣。對周遭環境及空間的感知很敏銳，可以輕易在建築物之間跳上跳下，但有時會分心摔下來。眼睛不好不喜歡一直張著眼睛，不喜歡太亮太吵的地方，和理央單獨在一起時會閉上眼睛休息。
                     </p>
                     <p>
-                        表演風格：<br>自我風格強烈，表演全憑感覺，完全沒在考慮觀眾的接受度。能簡單做出令人匪夷所思的高難度動作及舞蹈，討厭舞台燈光，與理央一起表演會矇上眼睛。
+                        <i class="fa-solid fa-diamond"></i>表演風格：<br>自我風格強烈，表演全憑感覺，完全沒在考慮觀眾的接受度。能簡單做出令人匪夷所思的高難度動作及舞蹈，討厭舞台燈光，與理央一起表演會矇上眼睛。
                     </p>
                 </div>
             </div>
