--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="GOGO">
         <h4 style="font-size: 50px; color: #a18080;">ATM設定</h4>
-        <p style="width: 70%;">注意：部分功能電腦看才不會跑版</p>
+        <p style="width: 70%;">注意：部分功能電腦看才不會跑版，BUGㄅ用回報<s>我也不會修</s></p>
         <button onclick="location.href='./TPS_info.html';">進入網頁</button>
     </div>
 </body>
