--- a/SR_info.html
+++ b/SR_info.html
@@ -27,7 +27,7 @@
             <div class="c141">
                 <img src="./image/66.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
-                    <h2 style="font-size: 30px; color: #a8a8a8; margin-bottom: 10px; margin-top: 10px;">荒川 靜</h2>
+                    <h2 style="font-size: 30px; color: #a8a8a8; margin-bottom: 10px;">荒川 靜</h2>
                     <p><i class="fa-solid fa-diamond"></i>年齡：約19（生日不明、高中畢業）</p>
                     <p><i class="fa-solid fa-diamond"></i>身高：181</p>
                     <p>
@@ -41,23 +41,23 @@
         </div>
     </div>
     <div class="model_containerh" id="model_containerh">
-        <div class="modelh" style="width: 50%;">
+        <div class="modelh">
             <div style="margin-bottom: 10px; color: #2b446a;">
                 <h1 style="text-align: right;">
                     <i class="fa-solid fa-xmark" id="closeh" style="cursor: pointer;"></i>
                 </h1>
             </div>
-            <div style="display: flex;flex-direction: row;">
+            <div class="ch">
                 <img src="./image/55.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
                     <h2 style="color: #d5ebee; font-size: 30px; margin-bottom: 10px;">海老原 理央</h2>
-                    <p>年齡：19（高中畢業）</p>
-                    <p>身高：175</p>
+                    <p><i class="fa-solid fa-diamond"></i>年齡：19（高中畢業）</p>
+                    <p><i class="fa-solid fa-diamond"></i>身高：175</p>
                     <p>
-                        介紹：<br>舊Masker實質負責人。家中經營日式食堂，擅長料理。濫好人性格，不會拒絕別人的請託，與靜接觸後有稍微改善。雙親忙碌因此生活技能強，總是碎念說受不了但一直以來都幫著靜收拾善後。
+                        <i class="fa-solid fa-diamond"></i>介紹：<br>舊Masker實質負責人。家中經營日式食堂，擅長料理。濫好人性格，不會拒絕別人的請託，與靜接觸後有稍微改善。雙親忙碌因此生活技能強，總是碎念說受不了但一直以來都幫著靜收拾善後。
                     </p>
                     <p>
-                        表演風格：<br>歌聲溫和柔潤，擅長配合他人。經常站在輔助位方便靜發揮，會幫助靜引導觀眾的視線及注意力，讓靜的表演變得容易吸收。
+                        <i class="fa-solid fa-diamond"></i>表演風格：<br>歌聲溫和柔潤，擅長配合他人。經常站在輔助位方便靜發揮，會幫助靜引導觀眾的視線及注意力，讓靜的表演變得容易吸收。
                     </p>
                 </div>
             </div>
