--- a/MSK_info.html
+++ b/MSK_info.html
@@ -27,40 +27,40 @@
         </ul>
     </header>
     <div class="model_container14" id="model_container14">
-        <div class="model14" style="width: 50%;">
+        <div class="model14">
             <div style="margin-bottom: 10px; color: #a29398;">
                 <h1 style="text-align: right;">
                     <i class="fa-solid fa-xmark" id="close14" style="cursor: pointer;"></i>
                 </h1>
             </div>
-            <div style="display: flex;flex-direction: row;">
+            <div class="c141">
                 <img src="./image/88.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
                     <h2 style="font-size: 30px; color: #efe4c7; margin-bottom: 10px;">御手洗 拾肆</h2>
-                    <p>年齡：18（高三）</p>
-                    <p>身高：184</p>
+                    <p><i class="fa-solid fa-diamond"></i>年齡：18（高三）</p>
+                    <p><i class="fa-solid fa-diamond"></i>身高：184</p>
                     <p>
-                        擊敗人。能看清他人的想法和情緒，卻不大想管。一旦對象是在意的人容易無法冷靜判斷。在外人面前會裝乖裝紳士，熟悉了才會暴露本性，前期在日向面前持續扮演「可靠前輩」的角色，有點保護過度的傾向，後期被日向打醒。
+                        <i class="fa-solid fa-diamond"></i>介紹：<br>擊敗人。能看清他人的想法和情緒，卻不大想管。一旦對象是在意的人容易無法冷靜判斷。在外人面前會裝乖裝紳士，熟悉了才會暴露本性，前期在日向面前持續扮演「可靠前輩」的角色，有點保護過度的傾向，後期被日向打醒。
                     </p>
                 </div>
             </div>
         </div>
     </div>
     <div class="model_containerh" id="model_containerh">
-        <div class="modelh" style="width: 50%;">
+        <div class="modelh">
             <div style="margin-bottom: 10px; color: #a29398;">
                 <h1 style="text-align: right">
                     <i class="fa-solid fa-xmark" id="closeh" style="cursor: pointer;"></i>
                 </h1>
             </div>
-            <div style="display: flex;flex-direction: row;">
+            <div class="ch">
                 <img src="./image/77.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
                     <h2 style="color: #d5cfeb; font-size: 30px; margin-bottom: 10px;">宮崎 日向</h2>
-                    <p>年齡：16（高一）</p>
-                    <p>身高：164</p>
+                    <p><i class="fa-solid fa-diamond"></i>年齡：16（高一）</p>
+                    <p><i class="fa-solid fa-diamond"></i>身高：164</p>
                     <p>
-                        開朗的理科少年，善於操作電子設備，常以工程師邏輯思考，總有意無意地抓/鑽到別人的語病。感情纖細溫柔但比較遲鈍。偶像宅，在加入Masker以前就是舊Masker的超級粉絲，看到前輩們會發瘋，就算已經成為了Masker的一員也一樣。
+                        <i class="fa-solid fa-diamond"></i>介紹：<br>開朗的理科少年，善於操作電子設備，常以工程師邏輯思考，總有意無意地抓/鑽到別人的語病。感情纖細溫柔但比較遲鈍。偶像宅，在加入Masker以前就是舊Masker的超級粉絲，看到前輩們會發瘋，就算已經成為了Masker的一員也一樣。
                     </p>
                 </div>
             </div>
