--- a/MSK_info.html
+++ b/MSK_info.html
@@ -42,6 +42,9 @@
                     <p>
                         <i class="fa-solid fa-diamond"></i>介紹：<br>擊敗人。能看清他人的想法和情緒，卻不大想管。一旦對象是在意的人容易無法冷靜判斷。在外人面前會裝乖裝紳士，熟悉了才會暴露本性，前期在日向面前持續扮演「可靠前輩」的角色，有點保護過度的傾向，後期被日向打醒。
                     </p>
+                    <p>
+                        <i class="fa-solid fa-diamond"></i>表演風格：<br>無論歌唱、舞蹈、表演水準都很高，可以完美的達成效果或要求，卻沒什麼靈魂。後期在日向的幫助下慢慢找到表演的熱情。                                              
+                    </p>
                 </div>
             </div>
         </div>
@@ -61,6 +64,9 @@
                     <p><i class="fa-solid fa-diamond"></i>身高：164</p>
                     <p>
                         <i class="fa-solid fa-diamond"></i>介紹：<br>開朗的理科少年，善於操作電子設備，常以工程師邏輯思考，總有意無意地抓/鑽到別人的語病。感情纖細溫柔但比較遲鈍。偶像宅，在加入Masker以前就是舊Masker的超級粉絲，看到前輩們會發瘋，就算已經成為了Masker的一員也一樣。
+                    </p>
+                    <p>
+                        <i class="fa-solid fa-diamond"></i>表演風格：<br>可愛、活力、有潛力的璞玉。擅長輕快輕巧的舞步，渲染觀眾情緒的能力強。                        
                     </p>
                 </div>
             </div>
@@ -95,7 +101,7 @@
         <div class="info">
             <div class="fontt">
                 <h1 style="color: #a29398;">Masker</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid nostrum error cumque. Iure, minima magnam, impedit voluptas distinctio itaque soluta non quasi inventore molestiae similique nisi laboriosam veritatis vero neque.</p>
+                <p>特色</p>
                 <button id="open" class="bpc">成員介紹</button>
                 <button class="bm" onclick="error();">成員介紹</button>
             </div>
