--- a/TPS_info.html
+++ b/TPS_info.html
@@ -33,7 +33,7 @@
                     <i class="fa-solid fa-xmark" id="close14" style="cursor: pointer;"></i>
                 </h1>
             </div>
-            <div style="display: flex;flex-direction: row;">
+            <div class="c141">
                 <img src="./image/44-1.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
                     <h2 style="font-size: 30px; color: #cfe2f3; margin-bottom: 10px;">御手洗 十四</h2>
@@ -53,7 +53,7 @@
                     <i class="fa-solid fa-xmark" id="closeh" style="cursor: pointer;"></i>
                 </h1>
             </div>
-            <div style="display: flex;flex-direction: row;">
+            <div class="ch">
                 <img src="./image/33-1.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
                     <h2 style="color: #d9d2e9; font-size: 30px; margin-bottom: 10px;">宮崎 比奈</h2>
