--- a/NIA_info.html
+++ b/NIA_info.html
@@ -27,13 +27,13 @@
         </ul>
     </header>
     <div class="model_container14" id="model_container14">
-        <div class="model14" style="width: 50%;">
+        <div class="model14">
             <div style="margin-bottom: 10px; color: #6f121f;">
                 <h1 style="text-align: right;">
                     <i class="fa-solid fa-xmark" id="close14" style="cursor: pointer;"></i>
                 </h1>
             </div>
-            <div style="display: flex;flex-direction: row;">
+            <div class="c141">
                 <img src="./image/11-1.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
                     <h2 style="font-size: 30px; color: #b2adc4; margin-bottom: 10px;">御手洗 十四</h2>
@@ -47,13 +47,13 @@
         </div>
     </div>
     <div class="model_containerh" id="model_containerh">
-        <div class="modelh" style="width: 50%;">
+        <div class="modelh">
             <div style="margin-bottom: 10px; color: #6f121f;">
                 <h1 style="text-align: right;">
                     <i class="fa-solid fa-xmark" id="closeh" style="cursor: pointer;"></i>
                 </h1>
             </div>
-            <div style="display: flex;flex-direction: row;">
+            <div class="ch">
                 <img src="./image/22-1.png" alt="" width="250px">
                 <div style="display: flex;flex-direction: column; text-align: left;">
                     <h2 style="color: #c1b7eb; font-size: 30px; margin-bottom: 10px;">宮崎 雛</h2>
