--- a/TPS_info.html
+++ b/TPS_info.html
@@ -27,7 +27,7 @@
         </ul>
     </header>
     <div class="model_container14" id="model_container14">
-        <div class="model14" style="width: 50%;">
+        <div class="model14">
             <div style="margin-bottom: 10px; color: #fcd9ce;">
                 <h1 style="text-align: right;">
                     <i class="fa-solid fa-xmark" id="close14" style="cursor: pointer;"></i>
@@ -47,7 +47,7 @@
         </div>
     </div>
     <div class="model_containerh" id="model_containerh">
-        <div class="modelh" style="width: 50%;">
+        <div class="modelh" >
             <div style="margin-bottom: 10px; color: #fcd9ce;">
                 <h1 style="text-align: right;">
                     <i class="fa-solid fa-xmark" id="closeh" style="cursor: pointer;"></i>
