--- a/index.html
+++ b/index.html
@@ -16,10 +16,22 @@
     </style>
 </head>
 <body>
+    <!--
     <div class="GOGO">
         <h4 style="font-size: 50px; color: #a18080;">ATM設定</h4>
         <p style="width: 70%;">注意：部分功能電腦看才不會跑版，BUGㄅ用回報<s>我也不會修</s></p>
         <button onclick="location.href='./TPS_info.html';">進入網頁</button>
+    </div>
+    -->
+    <div class="card">
+        <div class="cardd">
+            <p>偶像paro</p>
+            <button onclick="location.href='./TPS_info.html';">進入網頁</button>
+        </div>
+        <div class="cardd">
+            <p>RPG paro</p>
+            <button disabled>整理中...</button>
+        </div>
     </div>
 </body>
 </html>
