--- a/TPS2.html
+++ b/TPS2.html
@@ -4,11 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tune Pansy</title>
+    <link rel="icon" href="./image/star.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/TPS2.css">
     <script src="https://kit.fontawesome.com/9d0690b173.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
+  <div class="preload" id="preload">
+    <div class="loading">
+        <div class="b b1"></div>
+        <div class="b b2"></div>
+        
+    </div>
+  </div>
   <div class="contain">
     <div class="navbar"></div>
     <div class="page_c">
@@ -33,10 +41,10 @@
       </div>
 
       <div class="logo">
-        <a href="#">
+        <a href="TPS2.html">
           <img class="cen" src="./image/logo (2).png" alt="">
         </a>
-        <a href="#">
+        <a href="NIA2.html">
           <img src="./image/logo (1).png" alt="">
         </a>
         <a href="MSK2.html">
@@ -51,7 +59,7 @@
   </div>
 
   <div id="unit">
-    <div id="unit_close"><i class="fa-solid fa-xmark"></i></div>
+    <div id="unit_close"><i id="unit_close_i" class="fa-solid fa-xmark"></i></div>
     <div class="con">
       <div class="fon">
         <p style="font-weight: 600; font-size: 18px; margin-bottom: 15px;">三色堇的和諧旋律</p>
@@ -71,11 +79,16 @@
       $("#unit").css("display","flex");
     }
   );
-  $("#unit_close").click(
+  $("#unit_close_i").click(
     function(){
       $("#unit").css("display","none");
     }
   );
+
+  var preload = document.getElementById("preload");
+    window.addEventListener('load',function(){
+        preload.style.display = "none";
+    })
 
 </script>
 </html>
