--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="icon" href="./image/star.png" type="image/x-icon" />
     <title>ATM設定</title>
     <style>
@@ -26,7 +26,7 @@
     <div class="card">
         <div class="cardd">
             <p>偶像paro</p>
-            <button onclick="location.href='./TPS_info.html';">進入網頁</button>
+            <button onclick="location.href='./TPS2.html';">進入網頁</button>
         </div>
         <div class="cardd">
             <p>RPG paro</p>
