--- a/MSK2.html
+++ b/MSK2.html
@@ -19,6 +19,7 @@
     </div>
   <div class="contain">
     <div class="navbar"></div>
+
     <div class="page_c">
       
       
@@ -69,6 +70,15 @@
       <div class="about_unit" id="about_unit">
         <p>UNIT<br>Info <i class="fa-solid fa-up-right-from-square"></i></p>
       </div>
+    </div>
+
+    <div class="page_m">
+      <div class="title">Info Masker</div>
+      <img src="./image/msk-m.jpg" alt="" >
+    <!--
+      <img src="./image/msk-m.jpg" alt="" >
+      <div class="title">Masker</div>
+    -->
     </div>
   </div>
 
