--- a/MSK2.html
+++ b/MSK2.html
@@ -73,7 +73,7 @@
     </div>
 
     <div class="page_m">
-      <div class="title">Info Masker</div>
+      <div class="title"><span class="ti">UNIT Info - </span>&nbsp;Masker</div>
       <img src="./image/msk-m.jpg" alt="" >
     <!--
       <img src="./image/msk-m.jpg" alt="" >
