--- a/MSK2.html
+++ b/MSK2.html
@@ -93,7 +93,7 @@
           </div>
           
         </div>
-        <div class="img_block bot">
+        <div class="img_block">
           <div class="block m3">
             <img src="./image/6.png" alt="">
           </div>
@@ -101,8 +101,11 @@
             <img src="./image/5.png" alt="">
           </div>
         </div>
+        <div class="others">
+          <div class="others_title">JUMP TO&nbsp;&nbsp;<i class="fa-solid fa-circle-down"></i></div>
+        </div>
       </div>
-  
+      
     </div>
   
   
