--- a/MSK2.html
+++ b/MSK2.html
@@ -19,7 +19,9 @@
     </div>
 
   <div class="contain">
-    <div class="navbar"></div>
+    <div class="navbar">
+      <a href="./index.html"><h2><i class="fa-solid fa-house"></i></h2></a>
+    </div>
 
     <div class="page_c">
       
@@ -103,6 +105,14 @@
         </div>
         <div class="others">
           <div class="others_title">JUMP TO&nbsp;&nbsp;<i class="fa-solid fa-circle-down"></i></div>
+          <div class="img_block">
+            <div class="block logo">
+              <a href="./TPS2.html"><img src="./image/logo (2).png" alt=""></a>
+            </div>
+            <div class="block logo">
+              <a href="./NIA2.html"><img src="./image/logo (1).png" alt=""></a>
+            </div>
+          </div>
         </div>
       </div>
       
