--- a/MSK2.html
+++ b/MSK2.html
@@ -115,7 +115,10 @@
           </div>
         </div>
       </div>
-      
+      <footer>
+        <p>Copyright © 2023 A.T.M. All rights reserved.</p>
+        <p>繪：奈露 | 背景：<a href="https://www.pixiv.net/users/42601023">佐藤真裸</a></p>
+      </footer>
     </div>
   
   
