--- a/MSK2.html
+++ b/MSK2.html
@@ -80,7 +80,7 @@
       <div class="title"><span class="ti">UNIT Info - </span>&nbsp;Masker</div>
       <img src="./image/msk-m.jpg" alt="" >
       <div class="all_info">
-        <img src="./image/logo (3).png" alt="">
+        <img src="./image/LOGO_MASKER_2.png" alt="">
         <h2>月光教堂下的神祕紳士</h2>
         <p>簡稱Msk，意即蒙面之人。由荒川靜帶領的具有神秘風格的團體。團體運用面具下掩藏令人遐想的特點，帶給觀眾多變的表演。對演出人員的要求極為嚴格，必須一步不差、一秒不差地踩在規定好的點上，一方面是為了協調性，一方面是為了防止在視線限制下相撞造成出演事故。</p>
       </div>
@@ -116,8 +116,8 @@
         </div>
       </div>
       <footer>
-        <p>Copyright © 2023 A.T.M. All rights reserved.</p>
         <p>繪：奈露 | 背景：<a href="https://www.pixiv.net/users/42601023">佐藤真裸</a></p>
+        <p>Copyright © 2023 A.T.M. All rights reserved.</p>
       </footer>
     </div>
   
