--- a/MSK2.html
+++ b/MSK2.html
@@ -116,7 +116,7 @@
         </div>
       </div>
       <footer>
-        <p>繪：奈露 | 團體LOGO設計：Wirt Yu | 背景：<a href="https://www.pixiv.net/users/42601023">佐藤真裸</a></p>
+        <p>繪@奈露 | 團體LOGO設計@Wirt Yu | 背景@<a href="https://www.pixiv.net/users/42601023">佐藤真裸</a></p>
         <p>Copyright © 2023 A.T.M. All rights reserved.</p>
       </footer>
     </div>
